# scripts-rust

./: .env.example  .gitattributes  .gitignore  API.md  Cargo.toml  README.md  peppy.html  vendor.yml
.github/: vendor.yml
.github/workflows/: build.yml
.sqlx/: query-07a5781e783c9d4e676a3a0dbccb2856072d658844c0414b243a1ac49ee91d51.json  query-07c8c4ded41610d5e3f4f156086989164d774f7cd496537db09a6613fc26b1ac.json  query-11a8020ae937b6f710b9fb5dd9dbd44486b3e71414732c19e6aa64b821632874.json  query-3ce9a4765104ae5c74f6b15c84919ae0a229979224c0867fbaf4a03d64424f3f.json  query-4430081821ae2044bf26992be49bcca2911c2ef607ed1ae3eb9b0c2e77584f1c.json  query-4a63642abba6eb8c5ec297dbc8324ce906456820fbe104d81c0f0a52d49ad073.json  query-512d73f8f3308d687dfc7b41f266af6a123e124b8dbf8dfb4de7e9b06d50096e.json  query-5abf18d522021f6471dd4a47136bf86ea0352c5a68f7a7290b9bbe567df39e39.json  query-67b726a26a9b59167b9d41adbf284024ffdbc959df873caee12b292c5ca64583.json  query-67f923e10eb70e82eee17d5d4335767a17d229d50570ce5993dcf543a9784ea7.json  query-7def3bc973b355310ad8b0aed5fe7aaa072dd536df117af4bb5853a92524d535.json  query-864649ccdb5c40d9cf1dcb8fa114692062c3007bb54a2bcf95c73e61b4fcbafe.json  query-86e83005db0e15c9591245a3afd0fd1538dea171e502cc3ff510516dba3fc584.json  query-88ae2deaf15ee10e45c6f9054f4c14dfa2f75bca3e1486ee8567a614ca1ba440.json  query-933e028460ee44d3bf5472e02628e6fde92937082a997df813e5fa40272028fb.json  query-a14089ef0add25410e5c9d62430504b87a7b1da7f12d86d99e931000d4078957.json  query-a2c82f7fe06639aa1e0b2b6376806cfb63ab3f6c4cdcc7145b9327bf859909a9.json  query-b464fac2b59b90125cc373771f65ff9527481439a36f390dacfaaa3488088ea8.json  query-b8d49eb5ebb434b92d58e4b8ce0deecd0bef56b4285e4f1a578b8a59d56c2b67.json  query-ba09296996a411511b263567746d3a94087a7532f6328d23c2692290207b93b9.json  query-bb0ccdb37554a8becd936b5a4b0b79fe848ed2bc38174031a4d06d62520d2dea.json  query-bbe8fc109365c1c0441c0e964c282406514996e5dc36cc682c47a99ad17fb073.json  query-cb9c5daf88fe6e4eaa67d0594719031b81699377283ebf7a176fb32718dc7d82.json  query-d0dc545c496b1f0a460f5a02f7d66068a549f5814da67e7f155f6562c24ab26b.json  query-e6a425573a241e80c7c97753219f069d6c047eccf5cbbfacffa6f4ac42f69d73.json  query-f2b8d68feccb7bc24f26b69154949c07df7c27b732edb497e84de0db8ce68de4.json  query-fb0cd98c8a14890872b345930a9f4bb3a4f2ffc7fe0324c8ba46b8c419d721b0.json  query-fb30e4a87e7782b5cb9dbd5aa0fc3dd314be032c0ce2bedfac7ba1c35c85680d.json  query-fd32fb3aef4c97314bf097993733d513f9a8476ecd0f80c5d0a4bdce282c6fe4.json
migrations/: 2024-05-27_initial.sql
src/: config.rs  database.rs  logging.rs  main.rs  schedule.rs  task.rs
src/client/: bytes.rs  mod.rs  multipart.rs  response.rs
src/context/: medal.rs  mod.rs  osekai.rs  user.rs  webhook.rs
src/database/: fetch.rs  mod.rs  store.rs
src/model/: badge.rs  finish.rs  hasher.rs  medal.rs  mod.rs  progress.rs  ranking.rs  rarity.rs  scrap.rs  user.rs
src/util/: args.rs  eta.rs  generate.rs  hasher.rs  mod.rs
