[package]
name = "osekai-scripts"
version = "3.0.2"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[dependencies]
bytes = { version = "1.0" }
clap = { version = "4.0", default-features = false, features = ["derive", "help", "std", "usage"] }
dotenvy = { version = "0.15" }
eyre = { version = "0.6" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http = { version = "0.2" }
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "tls12", "tokio-runtime", "webpki-tokio"] }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", default-features = false }
scraper = { version = "0.22", default-features = false }
self_update = { version = "0.39", features = ["archive-zip", "compression-zip-deflate", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["macros", "mysql", "runtime-tokio-rustls", "time"] }
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.20", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }

[profile.dev.package.sqlx-macros]
opt-level = 3