[package]
name = "osekai-scripts"
version = "3.0.2"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.0", default-features = false, features = ["derive", "help", "std", "usage"] }
dotenvy = { version = "0.15" }
eyre = "0.6.12"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", default-features = false, features = ["client", "http2"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http2", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client", "client-legacy", "http2", "tokio"] }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", default-features = false }
rustls = { version = "0.23.20", default-features = false, features = ["ring", "std", "tls12"] }
scraper = { version = "0.22", default-features = false }
self_update = { version = "0.39", features = ["archive-zip", "compression-zip-deflate", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["macros", "mysql", "runtime-tokio-rustls", "time"] }
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.20", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }

[profile.dev.package.sqlx-macros]
opt-level = 3